Simplified codegen